# AtRiskSchools

./: Focused_School_Data_Cleaned.csv  HomePage.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/learn/: events.out.tfevents
catboost_info/fold-0/test/: events.out.tfevents
catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-1/learn/: events.out.tfevents
catboost_info/fold-1/test/: events.out.tfevents
catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-2/learn/: events.out.tfevents
catboost_info/fold-2/test/: events.out.tfevents
catboost_info/fold-3/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-3/learn/: events.out.tfevents
catboost_info/fold-3/test/: events.out.tfevents
catboost_info/fold-4/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-4/learn/: events.out.tfevents
catboost_info/fold-4/test/: events.out.tfevents
catboost_info/learn/: events.out.tfevents
